# git-sync

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  bazel-bin  bazel-git-sync  bazel-out  bazel-testlogs  go.mod  go.sum  main.go  release.sh  schema.go  shell.nix
examples/: push.yaml  simple.yaml
examples/systemd/: git-sync.service
