load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "git-sync",
    srcs = [
        "main.go",
        "schema.go",
    ],
    pure = "on",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_go_github//github:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_santhosh_tekuri_jsonschema//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@in_gopkg_src_d_go_git_v4//:go_default_library",
        "@in_gopkg_src_d_go_git_v4//config:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing/format/config:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing/transport:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing/transport/http:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing/transport/ssh:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@org_golang_x_crypto//ssh:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
    x_defs = {
        "main.version": "{STABLE_GIT_TAG}",
        "main.commit": "{STABLE_GIT_COMMIT}",
    },
)

load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")
