load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "git-sync",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = {
        "main.version": "{STABLE_GIT_TAG}",
        "main.commit": "{STABLE_GIT_COMMIT}",
    },
)

load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix cgit.xrt0x.com/xrt0x/git-sync
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "schema.go",
    ],
    importpath = "cgit.xrt0x.com/xrt0x/git-sync",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/go-git/go-git/v5:go_default_library",
        "//vendor/github.com/go-git/go-git/v5/config:go_default_library",
        "//vendor/github.com/go-git/go-git/v5/plumbing/format/config:go_default_library",
        "//vendor/github.com/go-git/go-git/v5/plumbing/transport:go_default_library",
        "//vendor/github.com/go-git/go-git/v5/plumbing/transport/http:go_default_library",
        "//vendor/github.com/go-git/go-git/v5/plumbing/transport/ssh:go_default_library",
        "//vendor/github.com/google/go-github/github:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus/promhttp:go_default_library",
        "//vendor/github.com/santhosh-tekuri/jsonschema:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/golang.org/x/crypto/ssh:go_default_library",
        "//vendor/golang.org/x/oauth2:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
    ],
)
